--- a/templates/Lawfirm/FirmLawyers.html
+++ b/templates/Lawfirm/FirmLawyers.html
@@ -75,6 +75,11 @@
                     </div>
                 </div>
                 <ul class="nav ">
+                    <li >
+                        <a  href="{{url_for('HiringLawyers')}}" >
+                        Recruit Lawyers
+                                                        </a>
+                    </li>
                             <li >
                                 <a  href="{{url_for('FirmLawyers')}}" >
                                   Associated Lawyers
