--- a/templates/Clients/Payment.html
+++ b/templates/Clients/Payment.html
@@ -261,8 +261,7 @@
                                                             <td >
                                                                 <input  type="hidden" name="ClientID" value="{{lr.ClientID}}">
 
-                                                                 <button  class="btn btn-success" type="submit"   >Make Payment</button>
-                                                                <input  type="hidden" name="LawyerID" value="{{lr.LawyerID}}">
+ <button   class="btn btn-success" name="Request" value="final" type="submit"  ><i class="material-icons">check_circle_outline</i></button>                                                                <input  type="hidden" name="LawyerID" value="{{lr.LawyerID}}">
                                                                 <input  type="hidden" name="CNRno" value="{{lr.CNRno}}">
 
                                                              
