--- a/templates/Loginnew.html
+++ b/templates/Loginnew.html
@@ -8,7 +8,6 @@
     <link rel="apple-touch-icon" sizes="76x76" href="/static/static2/assets/img/apple-icon.png" />
     <link rel="icon" type="image/png" href="/static/static2/assets/img/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Material Dashboard PRO by Creative Tim | Premium Bootstrap Admin Template</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
     <!-- Canonical SEO -->
@@ -122,6 +121,8 @@
                                     </div>
                                     <div class="footer text-center">
                                         <button type="submit" class="btn btn-rose btn-simple btn-wd btn-lg">Let's go</button>
+                                        <a href="{{ url_for('ScheduleOfficer')}}" class="btn btn-rose btn-simple btn-wd btn-lg">Sign in as an Officer</button>
+
                                     </div>
                                 </div>
                             </form>
