--- a/templates/Officer/DocUploadStatus.html
+++ b/templates/Officer/DocUploadStatus.html
@@ -172,11 +172,11 @@
                         <ul class="nav navbar-nav navbar-right">
                                                     
                                
-                             <li>
+                            <!--  <li>
                                 <a href="{{url_for('Account')}}" >
                                   View Account
                                                                    </a>
-                            </li>
+                            </li> -->
                             
                         </ul>
                         <form class="navbar-form navbar-right" role="search">
@@ -250,7 +250,7 @@
                                                                     <tr>
                                                                             <form method="post">
 
-                                                                        <td>
+                                                                        <td style="text-align: center">
                                                                             {{case.FilingNo}}
                                                                             <input  type="hidden" name="FilingNo" value="{{case.FilingNo}}">
 
@@ -259,11 +259,11 @@
                                                                             {{case.FilingDate}}
 
                                                                         </td>
-                                                                       <td>
+                                                                       <td style="text-align: center" >
                                                                             {{case.VictimID}}
 
                                                                         </td>
-                                                                        <td>
+                                                                        <td style="text-align: center">
                                                                             {{case.Victim_LawyerID}}
 
                                                                         </td>
@@ -296,11 +296,9 @@
                                                                         </td >
                                                                             <td style="text-align: center">
                                                                                     {%if case.Doc_Uploaded_Victim==1 and case.is_Verified==0%}
-                                                                                    <button   class="btn btn-success" name="Request" value="final" type="submit"  >
-                                                                                    </button>
+                                                                            <button   class="btn btn-success" name="Request" value="final" type="submit"  ><i class="material-icons">check_circle_outline</i></button>
                                                                                     {%else%}
-                                                                                     <button  disabled class="btn btn-danger" name="Request" value="final" type="submit"  >
-                                                                                    </button>
+                                                                                     <button  disabled class="btn btn-danger" name="Request" value="final" type="submit"  ><i class="material-icons">highlight_off</i>             </button>
                                                                                     {%endif%}
                                                                                    </form>
                                                                                 
