--- a/templates/Clients/FindFirm.html
+++ b/templates/Clients/FindFirm.html
@@ -107,6 +107,11 @@
                                   Make Payement
                                                                    </a>
                             </li>
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>
                             
                         </ul>
                         
