--- a/templates/Judge/PreviousJudgements.html
+++ b/templates/Judge/PreviousJudgements.html
@@ -104,7 +104,11 @@
                                     </li>
                                     
                             
-                            
+                                    <li>
+                                        <a href="/Logout" >
+                                            Logout
+                                        </a>
+                                    </li>
                         </ul>
                         
             </div>
