--- a/templates/Lawfirm/ClientRequestsLawFirm.html
+++ b/templates/Lawfirm/ClientRequestsLawFirm.html
@@ -122,7 +122,11 @@
                                                                    </a>
                             </li>                                                        
                                                 
-                            
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>
                         </ul>
                         
             </div>
