--- a/templates/Lawfirm/FirmLawyers.html
+++ b/templates/Lawfirm/FirmLawyers.html
@@ -105,7 +105,11 @@
                                   Total Wins/Loses
                                                                    </a>
                             </li>                                                        
-                                                
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>             
                             
                         </ul>
                         
