--- a/templates/Officer/CaseStatements.html
+++ b/templates/Officer/CaseStatements.html
@@ -145,7 +145,11 @@
                                                                    </a>
                             </li>
                                                                                  
-                                                
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>              
                             
                         </ul>
                         
