--- a/templates/Officer/FileFIR.html
+++ b/templates/Officer/FileFIR.html
@@ -120,7 +120,11 @@
                                      View Case Related Documents
                                                                    </a>
                             </li>
-                                                                                 
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>                                                  
                                                 
                             
                         </ul>
