--- a/templates/Clients/FirmRequest.html
+++ b/templates/Clients/FirmRequest.html
@@ -144,6 +144,11 @@
                                   Make Payement
                                                                    </a>
                             </li>
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>
                             
                         </ul>
                         
