--- a/templates/Clients/LawyerRequest.html
+++ b/templates/Clients/LawyerRequest.html
@@ -144,7 +144,11 @@
                                   Make Payement
                                                                    </a>
                             </li>
-                            
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>
                         </ul>
                         
             </div>
