--- a/templates/Judge/SetNextHearing.html
+++ b/templates/Judge/SetNextHearing.html
@@ -142,7 +142,11 @@
                                          </a>
                                     </li>
                                     
-                            
+                                    <li>
+                                        <a href="/Logout" >
+                                            Logout
+                                        </a>
+                                    </li>
                             
                         </ul>
                         
