--- a/templates/Lawfirm/HiringLawyers.html
+++ b/templates/Lawfirm/HiringLawyers.html
@@ -120,7 +120,11 @@
                                                                    </a>
                             </li>                                                        
                                                 
-                            
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>
                         </ul>
                         
             </div>
