--- a/templates/Lawfirm/LawfirmAccount.html
+++ b/templates/Lawfirm/LawfirmAccount.html
@@ -144,7 +144,11 @@
                                   Total Wins/Loses
                                                                    </a>
                             </li>                                                        
-                                                
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>              
                             
                         </ul>
                         
