--- a/templates/Lawyer/ClientRequests.html
+++ b/templates/Lawyer/ClientRequests.html
@@ -122,7 +122,11 @@
                                   Request Payement
                                                                    </a>
                             </li>
-                            
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>
                             
                         </ul>
                         
