--- a/templates/Lawyer/FileCase.html
+++ b/templates/Lawyer/FileCase.html
@@ -123,7 +123,11 @@
                                                                    </a>
                             </li>
                             
-                            
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>
                         </ul>
                         
             </div>
