--- a/templates/Lawyer/LawyerAccount.html
+++ b/templates/Lawyer/LawyerAccount.html
@@ -144,7 +144,11 @@
                                                                    </a>
                             </li>
                             
-                            
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>
                         </ul>
                         
             </div>
