--- a/templates/Officer/ScheduleOfficer.html
+++ b/templates/Officer/ScheduleOfficer.html
@@ -106,7 +106,11 @@
                                                                    </a>
                             </li>
                                                                                  
-                                                
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>             
                             
                         </ul>
                         
