--- a/templates/Officer/SetHearing.html
+++ b/templates/Officer/SetHearing.html
@@ -139,7 +139,11 @@
                                      View Case Related Documents
                                                                    </a>
                             </li>
-                                                                                 
+                            <li>
+                                <a href="/Logout" >
+                                    Logout
+                                </a>
+                            </li>                                              
                                                 
                             
                         </ul>
