--- a/templates/Loginnew.html
+++ b/templates/Loginnew.html
@@ -69,15 +69,20 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     
-                    <li class="active">
+                    <li >
                         <a href="{{ url_for('Registeras')}}">
                             <i class="material-icons">person_add</i> Register
                         </a>
                     </li>
                    
-                    <li class="">
+                    <li class="active">
                         <a href="{{ url_for('Login')}}">
                             <i class="material-icons">lock_open</i> Login
+                        </a>
+                    </li>
+                     <li class="">
+                        <a href="{{ url_for('index')}}">
+                             Home Page
                         </a>
                     </li>
                 </ul>
