--- a/templates/Register.html
+++ b/templates/Register.html
@@ -79,6 +79,11 @@
                             <i class="material-icons">lock_open</i> Login
                         </a>
                     </li>
+                    <li class="">
+                        <a href="{{ url_for('index')}}">
+                             Home Page
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -108,19 +113,37 @@
                                             <div class="input-group row-md-8 ">
                                                 <div class="form-group label-floating">
                                                     <label>Year of Establishment</label>
-                                                <input type="text" class="form-control" name="est"required="">
+                                                <input type="number" class="form-control" name="est"required="">
                                                 </div>
                                             </div>
                                             <div class="input-group row-md-8 ">
                                                 <div class="form-group label-floating">
                                                     <label>Area of Specialization</label>
-                                                <input type="text" class="form-control" name="areaspe"required="">
+                                                    <div class="radio">
+                                                        <label>
+                                                            <input type="radio" name="areaspe" value="civil" checked> Cvil
+                                                        </label>
+                                                    </div>
+                                                    <div class="radio">
+                                                        <label>
+                                                            <input type="radio" name="areaspe" value="crime" > Criminal
+                                                        </label>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="input-group row-md-8 ">
                                                 <div class="form-group label-floating">
                                                     <label>License Status</label>
-                                                <input type="text" class="form-control" name="ls"required="">
+                                                    <div class="radio">
+                                                        <label>
+                                                            <input type="radio" name="ls" value="active" checked> Active
+                                                        </label>
+                                                    </div>
+                                                    <div class="radio">
+                                                        <label>
+                                                            <input type="radio" name="ls" value="deactive" > Deactive
+                                                        </label>
+                                                    </div>
                                                 </div>
                                             </div>
                                             {%else%}
@@ -156,13 +179,26 @@
                                              <div class="input-group row-md-8 ">
                                                 <div class="form-group label-floating">
                                                     <label>Specialization Area</label>
-                                                <input type="text" class="form-control" name="specarea"required="">
+                                                    <div class="radio">
+                                                        <label>
+                                                            <input type="radio" name="specarea" value="civil" checked> Cvil
+                                                        </label>
+                                                    </div>
+                                                    <div class="radio">
+                                                        <label>
+                                                            <input type="radio" name="specarea" value="crime" > Criminal
+                                                        </label>
+                                                    </div>
+
+
+
+
                                                 </div>
                                             </div>
                                             <div class="input-group row-md-8 ">
                                                 <div class="form-group label-floating">
                                                     <label>AIBE Year of Passing</label>
-                                                <input type="text" class="form-control" name="AIBE"required="">
+                                                <input type="number" class="form-control" name="AIBE"required="">
                                                 </div>
                                             </div>
                                                                
@@ -170,7 +206,16 @@
                                             <div class="input-group row-md-8 ">
                                                 <div class="form-group label-floating">
                                                     <label>License Staus</label>
-                                                <input type="text" class="form-control" name="lis"required="">
+                                                    <div class="radio">
+                                                        <label>
+                                                            <input type="radio" name="lis" value="active" checked> Active
+                                                        </label>
+                                                    </div>
+                                                    <div class="radio">
+                                                        <label>
+                                                            <input type="radio" name="lis" value="deactive" > Deactive
+                                                        </label>
+                                                    </div>
                                                 </div>
                                             </div>
                                             {% endif %}
@@ -179,8 +224,17 @@
                                             
                                             <div class="input-group row-md-8 ">
                                                 <div class="form-group label-floating">
-                                                    <label>Source of Appoitment</label>
-                                                <input type="text" class="form-control" name="src"required="">
+                                                    <label>Source of Recruitment</label>
+                                                    <div class="radio">
+                                                        <label>
+                                                            <input type="radio" name="src" value="Merit" checked> Merit Selection
+                                                        </label>
+                                                    </div>
+                                                    <div class="radio">
+                                                        <label>
+                                                            <input type="radio" name="src" value="Appointment" > Appointment
+                                                        </label>
+                                                    </div>
                                                 </div>
                                             </div>
                                              <div class="input-group row-md-8 ">
