--- a/templates/Registeras.html
+++ b/templates/Registeras.html
@@ -71,6 +71,11 @@
                             <i class="material-icons">lock_open</i> Login
                         </a>
                     </li>
+                     <li class="">
+                        <a href="{{ url_for('index')}}">
+                             Home Page
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
